--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2100,7 +2100,7 @@ body {
 .cid-qY1iDcfCSZ {
   padding-top: 15px;
   padding-bottom: 30px;
-  background-color: #efefef;
+  background-color: #f9f9f9;
 }
 .cid-qY6Mo9PWV2 {
   padding-top: 90px;
